# mtpython

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.txt
include/: consts.h  cpython_version.h  exceptions.h  macros.h  singleton.h
include/gc/: collected_heap.h  garbage_collector.h  garbage_collector_mmtk.h  gc_context.h  heap.h
include/interpreter/: arguments.h  cell.h  code.h  compiler.h  descriptor.h  error.h  function.h  gateway.h  generator.h  module.h  pycode.h  pyframe.h  signature.h  typedef.h
include/modules/_collections/: collectionsmodule.h
include/modules/_io/: bufferedio.h  fileio.h  iobase.h  iomodule.h  textio.h
include/modules/_weakref/: weakrefmodule.h
include/modules/builtins/: bltinmodule.h
include/modules/errno/: errnomodule.h
include/modules/posix/: posixmodule.h
include/modules/sys/: sysmodule.h
include/objects/: base_object.h  bltin_exceptions.h  obj_space.h  space_cache.h
include/objects/std/: bool_object.h  bytearray_object.h  bytes_object.h  dict_object.h  frame.h  int_object.h  iter_object.h  list_object.h  memory_object.h  none_object.h  obj_space_std.h  object_object.h  set_object.h  str_object.h  tuple_object.h  type_object.h  unicode_object.h
include/parse/: code_builder.h  codegen.h  compile_info.h  diagnostics.h  parser.h  scanner.h  symtable.h  token.h
include/tools/: errno_def.h  generate_errno.py  generate_opcode.py  opcode.h
include/tree/: arguments_node.h  assign_node.h  augassign_node.h  binary_node.h  binop_node.h  break_node.h  compare_node.h  continue_node.h  delete_node.h  expr_context.h  for_node.h  functiondef_node.h  if_node.h  ifexp_node.h  module_node.h  name_node.h  node.h  nodes.h  number_node.h  pass_node.h  raise_node.h  return_node.h  tuple_node.h  unaryop_node.h  value_node.h  while_node.h  yield_node.h  yieldfrom_node.h
include/tree/nodes/: alias_node.h  arguments_node.h  assert_node.h  assign_node.h  attribute_node.h  augassign_node.h  binop_node.h  boolop_node.h  break_node.h  call_node.h  classdef_node.h  compare_node.h  comprehension_node.h  const_node.h  continue_node.h  delete_node.h  dict_node.h  excepthandler_node.h  expr_node.h  for_node.h  functiondef_node.h  generatorexp_node.h  global_node.h  if_node.h  ifexp_node.h  import_node.h  importfrom_node.h  keyword_node.h  lambda_node.h  list_node.h  module_node.h  name_node.h  node.h  number_node.h  pass_node.h  raise_node.h  return_node.h  set_node.h  slice_node.h  starred_node.h  (+9 more)
include/tree/visitors/: generic_visitor.h  print_visitor.h
include/type/: type.h  type_int.h  types.h  value.h
include/utils/: file_helper.h  source_buffer.h
include/vm/: native_thread.h  native_thread_posix.h  thread_context.h  vm.h
lib-python/3.4/: _collections_abc.py  os_fake.py
libmtpython/: CMakeLists.txt  file_helper.cpp
libmtpython/gc/: collected_heap.cpp  garbage_collector_mmtk.cpp  mmtk.h
libmtpython/interpreter/: arguments.cpp  cell.cpp  compiler.cpp  descriptor.cpp  error.cpp  function.cpp  gateway.cpp  generator.cpp  module.cpp  pycode.cpp  pyframe.cpp  typedef.cpp
libmtpython/modules/_collections/: collectionsmodule.cpp
libmtpython/modules/_io/: bufferedio.cpp  fileio.cpp  iobase.cpp  iomodule.cpp  textio.cpp
libmtpython/modules/_weakref/: weakrefmodule.cpp
libmtpython/modules/builtins/: bltinmodule.cpp
libmtpython/modules/errno/: errnomodule.cpp
libmtpython/modules/posix/: posixmodule.cpp
libmtpython/modules/sys/: sysmodule.cpp
libmtpython/objects/: base_object.cpp  bltin_exceptions.cpp  obj_space.cpp
libmtpython/objects/std/: bool_object.cpp  bytearray_object.cpp  bytes_object.cpp  dict_object.cpp  int_object.cpp  iter_object.cpp  list_object.cpp  memory_object.cpp  none_object.cpp  obj_space_std.cpp  object_object.cpp  set_object.cpp  str_object.cpp  tuple_object.cpp  type_object.cpp  unicode_object.cpp
libmtpython/parse/: code_builder.cpp  codegen.cpp  diagnostics.cpp  parser.cpp  scanner.cpp  symtable.cpp  token.cpp
libmtpython/tree/: nodes.cpp
libmtpython/utils/: file_helper.cpp  source_buffer.cpp
libmtpython/vm/: initpath.cpp  native_thread.cpp  native_thread_posix.cpp  thread_context.cpp  vm.cpp
mtpython/: CMakeLists.txt  main.cpp
test/: test_1.py  test_10.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
